# django-ib-menus

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  requirements.txt  setup.cfg  setup.py  tox.ini
menus/: apps.py  translation.py
menus/admin/: base.py  utils.py
menus/migrations/: 0001_initial.py
menus/models/: __init__.py  fabric.py  models.py  queysets.py
menus/templatetags/: jinja.py  menus.py
