[metadata]
description = django-ib-manus allows you to generate tree view menus dynamically.
long_description = file: README.rst
author = Ihor Bondarenko
author_email = cguilliman@gmail.com
url = https://github.com/Cguilliman/django-ib-menus
home-page = https://github.com/Cguilliman/django-ib-menus
keywords = python, menus, menus, items, item, django-menus, django, django-menu-item, menu-item
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    django-modeltranslation>=0.13.3

[isort]
known_first_party = d
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = d
branch = True
omit =
    menus/migrations/*
    menus/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/menus